# astra-mb-internal-ai-chatbot

./: RAG_files_astra_langchain_unstructed.ipynb
ai-assistant/: Makefile  pyproject.toml
ai-assistant/backend/: constants.py  graph.py  ingest.py  loadastra.py
ai-assistant/data/: THẨM-ĐỊNH-TÍN-DỤNG.txt  digitalonboarding.txt
ai-assistant/frontend/: .gitignore  package-lock.json  package.json
ai-assistant/frontend/app/: layout.tsx
ai-assistant/frontend/app/components/: ChatWindow.tsx  EmptyState.tsx
