[tool.poetry]
name = "astra-langchain"
version = "0.1.0"
description = ""
authors = ["Krishnan Narayana swamy"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = ">=0.2.0"
langsmith = "^0.1.60"
langchain-cohere = ">=0.1.5,<0.2.0"
langchain-community = ">=0.2.0,<0.3.0"
langchain-openai = ">=0.1.7,<0.2.0"
langchain-google-genai = ">=1.0.5,<2.0.0"
langchain-anthropic = "^0.1.13"
langchain-fireworks = "^0.1.3"
langchain-astradb = "^0.3.3"
langserve = {extras = ["server"], version = "^0.2.0"}
langgraph = ">=0.0.65"
langgraph-cli= ">=0.1.21,<0.2.0"
fastapi = "^0.103.1"
pydantic = "1.10"
uvicorn = "^0.23.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
voyageai = "^0.1.4"
pillow = "^10.2.0"
urllib3 = "<2"

[tool.poetry.group.lint.dependencies]
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
